--- a/Agent.xcodeproj/xcshareddata/xcschemes/Agent-iOS.xcscheme
+++ b/Agent.xcodeproj/xcshareddata/xcschemes/Agent-iOS.xcscheme
@@ -3,7 +3,7 @@
    LastUpgradeVersion = "1200"
    version = "1.3">
    <BuildAction
-      parallelizeBuildables = "NO"
+      parallelizeBuildables = "YES"
       buildImplicitDependencies = "NO">
       <BuildActionEntries>
          <BuildActionEntry
@@ -18,20 +18,6 @@
                BuildableName = "NewRelic.framework"
                BlueprintName = "Agent_iOS"
                ReferencedContainer = "container:Agent.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "NO"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "020DEB0A2519588A00BF7309"
-               BuildableName = "CrashReporter-iOS-Tests.xctest"
-               BlueprintName = "CrashReporter-iOS-Tests"
-               ReferencedContainer = "container:modular-crash-reporter-ios/CrashReporter.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -67,16 +53,6 @@
                   Identifier = "Agent_Tests">
                </Test>
             </SkippedTests>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "020DEB0A2519588A00BF7309"
-               BuildableName = "CrashReporter-iOS-Tests.xctest"
-               BlueprintName = "CrashReporter-iOS-Tests"
-               ReferencedContainer = "container:modular-crash-reporter-ios/CrashReporter.xcodeproj">
-            </BuildableReference>
          </TestableReference>
       </Testables>
    </TestAction>
