change: to use right secret during lambda upload and run

--- a/.github/workflows/uploadApp.yml
+++ b/.github/workflows/uploadApp.yml
@@ -75,8 +75,8 @@ jobs:
     needs: [build-ios]
     runs-on: ubuntu-latest
     env:
-      LT_USERNAME: ${{ secrets.APP_EXP_LAMBDA_USERNAME }}
-      LT_ACCESSKEY: ${{ secrets.APP_EXP_LAMBDA_ACCESS_KEY }}
+      LT_USERNAME: ${{ secrets.LAMBDA_USERNAME }}
+      LT_ACCESSKEY: ${{ secrets.LAMBDA_ACCESS_KEY }}
     steps:
       - uses: actions/checkout@1e31de5234b9f8995739874a8ce0492dc87873e2 # pin@v4
 
