fix: secret prop 2

--- a/.github/workflows/uploadApp.yml
+++ b/.github/workflows/uploadApp.yml
@@ -45,11 +45,15 @@ jobs:
       # the plist to be modified is located at ./Test Harness/NRTestApp/NRAPI-Info.plist
       # the secret mapping is as follows secrets.NRTESTAPP_CRASH_COLLECTOR_ADDRESS , secrets.NRTESTAPP_MAIN_COLLECTOR_ADDRESS, secrets.NRTESTAPP_APP_TOKEN
       - name: Set plist secrets
+        env:
+          NRTESTAPP_CRASH_COLLECTOR_ADDRESS: ${{ secrets.NRTESTAPP_CRASH_COLLECTOR_ADDRESS }}
+          NRTESTAPP_MAIN_COLLECTOR_ADDRESS: ${{ secrets.NRTESTAPP_MAIN_COLLECTOR_ADDRESS }}
+          NRTESTAPP_APP_TOKEN: ${{ secrets.NRTESTAPP_APP_TOKEN }}
         run: |
           PLIST_PATH="./Test Harness/NRTestApp/NRAPI-Info.plist"
-          /usr/libexec/PlistBuddy -c "Set :crashCollectorAddress string ${secrets.NRTESTAPP_CRASH_COLLECTOR_ADDRESS}" "$PLIST_PATH"
-          /usr/libexec/PlistBuddy -c "Set :collectorAddress string ${secrets.NRTESTAPP_MAIN_COLLECTOR_ADDRESS}" "$PLIST_PATH"
-          /usr/libexec/PlistBuddy -c "Set :NRAPIKey string ${secrets.NRTESTAPP_APP_TOKEN}" "$PLIST_PATH"
+          /usr/libexec/PlistBuddy -c "Set :crashCollectorAddress string ${NRTESTAPP_CRASH_COLLECTOR_ADDRESS}" "$PLIST_PATH"
+          /usr/libexec/PlistBuddy -c "Set :collectorAddress string ${NRTESTAPP_MAIN_COLLECTOR_ADDRESS}" "$PLIST_PATH"
+          /usr/libexec/PlistBuddy -c "Set :NRAPIKey string ${NRTESTAPP_APP_TOKEN}" "$PLIST_PATH"
 
       - name: Clean iOS app
         run: |
