--- a/.github/workflows/wdio.yml
+++ b/.github/workflows/wdio.yml
@@ -10,6 +10,12 @@ on:
   # enables option for workflow to be manually executed in Github UI
   workflow_dispatch:
 
+  # Automatically trigger after uploadApp workflow completes successfully
+  workflow_run:
+    workflows: ["Upload iOS NRTestApp to LambdaTest"]
+    types:
+      - completed
+
   # enables scheduled execution every 30 minutes
   # schedule:
   #   - cron: "*/30 * * * *"
@@ -18,6 +24,8 @@ jobs:
   ios-data:
     name: Generate iOS data
     runs-on: ubuntu-latest
+    # Only run if manually triggered or if uploadApp workflow succeeded
+    if: ${{ github.event_name == 'workflow_dispatch' || github.event.workflow_run.conclusion == 'success' }}
     env:
       LT_USERNAME: ${{ secrets.LAMBDA_USERNAME }}
       LT_ACCESSKEY: ${{ secrets.LAMBDA_ACCESS_KEY }}
@@ -25,6 +33,56 @@ jobs:
       - uses: actions/checkout@1e31de5234b9f8995739874a8ce0492dc87873e2 # pin@v4
       - name: Setup environment
         uses: ./.github/actions/env-setup
+
+      - name: Download LambdaTest app ID artifact (from workflow_run)
+        if: github.event_name == 'workflow_run'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const artifacts = await github.rest.actions.listWorkflowRunArtifacts({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              run_id: context.payload.workflow_run.id,
+            });
+            const matchArtifact = artifacts.data.artifacts.filter((artifact) => {
+              return artifact.name == "lambdatest-app-id"
+            })[0];
+            if (matchArtifact) {
+              const download = await github.rest.actions.downloadArtifact({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                artifact_id: matchArtifact.id,
+                archive_format: 'zip',
+              });
+              const fs = require('fs');
+              fs.writeFileSync(`${process.env.GITHUB_WORKSPACE}/app-id.zip`, Buffer.from(download.data));
+            }
+
+      - name: Extract app ID (from workflow_run)
+        if: github.event_name == 'workflow_run'
+        run: |
+          if [ -f app-id.zip ]; then
+            unzip -q app-id.zip -d LambdaTest/
+            echo "Extracted app ID from workflow_run artifact"
+          fi
+        continue-on-error: true
+
+      - name: Download LambdaTest app ID artifact (from manual run)
+        if: github.event_name == 'workflow_dispatch'
+        uses: actions/download-artifact@v4
+        with:
+          name: lambdatest-app-id
+          path: ${{ github.workspace }}/LambdaTest
+        continue-on-error: true
+
+      - name: Set LT_APP_ID environment variable
+        run: |
+          if [ -f LambdaTest/.last-app-id ]; then
+            echo "LT_APP_ID=$(cat LambdaTest/.last-app-id)" >> $GITHUB_ENV
+            echo "Using app ID: $(cat LambdaTest/.last-app-id)"
+          else
+            echo "No app ID artifact found, tests will use default app ID from config"
+          fi
 
       - name: Execute iOS tests
         run: for i in {1..1}; do echo "test run $i"; npm run test:wdio-ios; done
