do not use hidden file in action

--- a/.github/workflows/wdio.yml
+++ b/.github/workflows/wdio.yml
@@ -77,9 +77,9 @@ jobs:
 
       - name: Set LT_APP_ID environment variable
         run: |
-          if [ -f LambdaTest/.last-app-id ]; then
-            echo "LT_APP_ID=$(tr -d '\n' < LambdaTest/.last-app-id)" >> $GITHUB_ENV
-            echo "Using app ID: $(tr -d '\n' < LambdaTest/.last-app-id)"
+          if [ -f LambdaTest/last-app-id ]; then
+            echo "LT_APP_ID=$(tr -d '\n' < LambdaTest/last-app-id)" >> $GITHUB_ENV
+            echo "Using app ID: $(tr -d '\n' < LambdaTest/last-app-id)"
           else
             echo "No app ID artifact found, tests will use default app ID from config"
           fi
