--- a/.github/workflows/uploadApp.yml
+++ b/.github/workflows/uploadApp.yml
@@ -110,7 +110,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: lambdatest-app-id
-          path: LambdaTest/.last-app-id
+          path: LambdaTest/last-app-id
           retention-days: 1
 
       - name: Log success
