--- a/.github/workflows/uploadApp.yml
+++ b/.github/workflows/uploadApp.yml
@@ -51,9 +51,9 @@ jobs:
           NRTESTAPP_APP_TOKEN: ${{ secrets.NRTESTAPP_APP_TOKEN }}
         run: |
           PLIST_PATH="./Test Harness/NRTestApp/NRAPI-Info.plist"
-          /usr/libexec/PlistBuddy -c "Set :crashCollectorAddress string ${NRTESTAPP_CRASH_COLLECTOR_ADDRESS}" "$PLIST_PATH"
-          /usr/libexec/PlistBuddy -c "Set :collectorAddress string ${NRTESTAPP_MAIN_COLLECTOR_ADDRESS}" "$PLIST_PATH"
-          /usr/libexec/PlistBuddy -c "Set :NRAPIKey string ${NRTESTAPP_APP_TOKEN}" "$PLIST_PATH"
+          /usr/libexec/PlistBuddy -c "Set :crashCollectorAddress ${NRTESTAPP_CRASH_COLLECTOR_ADDRESS}" "$PLIST_PATH"
+          /usr/libexec/PlistBuddy -c "Set :collectorAddress ${NRTESTAPP_MAIN_COLLECTOR_ADDRESS}" "$PLIST_PATH"
+          /usr/libexec/PlistBuddy -c "Set :NRAPIKey ${NRTESTAPP_APP_TOKEN}" "$PLIST_PATH"
 
       - name: Clean iOS app
         run: |
